test/files/invalid/bad_end_of_string.fbs
table Foo {
  x: string = "hello;
}