test/files/invalid/bad_end_of_string.stderr
error: Unexpected end of string
  ┌─ test/files/invalid/bad_end_of_string.fbs:3:2
  │
3 │ }
  │  ^

Error: Bailing because of errors
